syntax = "proto3";

package blockjoy.api.ui_v1;

import "common.proto";

message LoginUserRequest {
  RequestMeta meta = 1;
  string email = 2;
  string password = 3;
}

message LoginUserResponse {
  ResponseMeta meta = 1;
  ApiToken token = 2;
}

message RefreshTokenRequest {
  RequestMeta meta = 1;
}

message RefreshTokenResponse {
  ResponseMeta meta = 1;
  ApiToken token = 2;
}

message ResetPasswordRequest {
  RequestMeta meta = 1;
  string email = 2;
}

message ResetPasswordResponse {
  ResponseMeta meta = 1;
}

message UpdatePasswordRequest {
  RequestMeta meta = 1;
  string password = 2;
}

message UpdatePasswordResponse {
  ResponseMeta meta = 1;
  ApiToken token = 2;
}

message UpdateUIPasswordRequest {
  RequestMeta meta = 1;
  string old_pwd = 2;
  string new_pwd = 3;
  string new_pwd_confirmation = 4;
}

message UpdateUIPasswordResponse {
  ResponseMeta meta = 1;
  ApiToken token = 2;
}

message ConfirmRegistrationRequest {
  RequestMeta meta = 1;
}

message ConfirmRegistrationResponse {
  ResponseMeta meta = 1;
  ApiToken token = 2;
}

message SwitchOrgRequest {
  RequestMeta meta = 1;
  string ord_id = 2;
}

/* Retrieve and refresh API token */
service AuthenticationService {
  /* Login user, i.e. retrieve token */
  rpc Login(LoginUserRequest) returns (LoginUserResponse) {}
  /* Confirm user registration */
  rpc Confirm(ConfirmRegistrationRequest) returns (ConfirmRegistrationResponse) {}
  /* Refresh API token. */
  rpc Refresh(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  /* Send the reset password email out to this user. Intentionally returns nothing to hide whether
  the user was registered or not */
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  /* Update the user's password to a new value */
  rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
  /* Update the user's password via profile UI */
  rpc UpdateUIPassword(UpdateUIPasswordRequest) returns (UpdateUIPasswordResponse);
  /* Switch active organization */
  rpc SwitchOrganization(SwitchOrgRequest) returns (LoginUserResponse);
}
