syntax = "proto3";

package blockjoy.api.ui_v1;

import "common.proto";

message GetHostProvisionRequest {
  RequestMeta meta = 1;
  string id = 2;
}

message GetHostProvisionResponse {
  ResponseMeta meta = 1;
  HostProvision host_provision = 2;
}

message CreateHostProvisionRequest {
  RequestMeta meta = 1;
  HostProvision host_provision = 2;
}

message CreateHostProvisionResponse {
  ResponseMeta meta = 1;
}

/* Host provisioning */
service HostProvisionService {
  /* Get a single host provision */
  rpc Get(GetHostProvisionRequest) returns (GetHostProvisionResponse) {}
  /* Create a single host provision */
  rpc Create(CreateHostProvisionRequest) returns (CreateHostProvisionResponse) {}
}
