syntax = "proto3";

package blockjoy.api.ui_v1;

import "common.proto";
import "google/protobuf/empty.proto";

message GetUserRequest {
  RequestMeta meta = 1;
}

message GetUserResponse {
  ResponseMeta meta = 1;
  User user = 2;
}

message CreateUserRequest {
  RequestMeta meta = 1;
  User user = 2;
  string password = 3;
  string password_confirmation = 4;
}

message CreateUserResponse {
  ResponseMeta meta = 1;
}

message UpdateUserRequest {
  RequestMeta meta = 1;
  User user = 2;
}

message UpdateUserResponse {
  ResponseMeta meta = 1;
  User user = 2;
}

message UpsertConfigurationRequest {
  RequestMeta meta = 1;
  repeated UserConfigurationParameter params = 3;
}

message UpsertConfigurationResponse {
  ResponseMeta meta = 1;
}

message GetConfigurationRequest {
  RequestMeta meta = 1;
}

message GetConfigurationResponse {
  ResponseMeta meta = 1;
  repeated UserConfigurationParameter params = 2;
}

/* Users can only delete themselves, so no need for any further params */
message DeleteUserRequest {
  RequestMeta meta = 1;
}

/* User related services */
service UserService {
  /* Retrieve a single user */
  rpc Get(GetUserRequest) returns (GetUserResponse) {}
  /* Create a single user */
  rpc Create(CreateUserRequest) returns (CreateUserResponse) {}
  /* Update a single user. */
  rpc Update(UpdateUserRequest) returns (UpdateUserResponse) {}
  /* Delete a single user. */
  rpc Delete(DeleteUserRequest) returns (google.protobuf.Empty) {}
  /* Create/update configuration parameters */
  rpc UpsertConfiguration(UpsertConfigurationRequest) returns (UpsertConfigurationResponse) {}
  /* Retrieve all configuration parameters */
  rpc GetConfiguration(GetConfigurationRequest) returns (GetConfigurationResponse) {}
}
